--- a/appIonic/bower.json
+++ b/appIonic/bower.json
@@ -9,6 +9,7 @@
     "angular-aria": "~1.3.15",
     "angular-material": "~0.9.3",
     "angular-animate": "~1.3.15",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-messages": "~1.3.15"
   }
 }
